<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/size8"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ViewSwitcher
                android:id="@+id/view_switcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateFirstView="true"
                android:animateLayoutChanges="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableLayout
                        android:id="@+id/container_options"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TableRow
                            android:id="@+id/tv_todos"
                            android:layout_margin="@dimen/size8"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/size16"
                                android:layout_marginEnd="@dimen/size16"
                                android:layout_weight="1.5"
                                android:text="@string/todos"
                                android:textColor="@color/divider_color"
                                android:textSize="16sp" />

                        </TableRow>

                        <TableRow
                            android:id="@+id/tv_aprovado"
                            android:layout_margin="@dimen/size8"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/size16"
                                android:layout_marginEnd="@dimen/size16"
                                android:layout_weight="1.5"
                                android:text="@string/aprovado"
                                android:textColor="@color/md_blue_grey_100"
                                android:textSize="16sp" />

                        </TableRow>

                        <TableRow
                            android:id="@+id/tv_submetido"
                            android:layout_margin="@dimen/size8"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/size16"
                                android:layout_marginEnd="@dimen/size16"
                                android:layout_weight="1.5"
                                android:text="@string/submetido"
                                android:textColor="@color/md_amber_A200"
                                android:textSize="16sp" />

                        </TableRow>

                        <TableRow
                            android:id="@+id/tv_cadastrado"
                            android:layout_margin="@dimen/size8"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/size16"
                                android:layout_marginEnd="@dimen/size16"
                                android:layout_weight="1.5"
                                android:text="@string/cadastro"
                                android:textColor="@color/md_teal_A400"
                                android:textSize="16sp" />

                        </TableRow>

                        <TableRow
                            android:id="@+id/tv_finalizado"
                            android:layout_margin="@dimen/size8"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/size16"
                                android:layout_marginEnd="@dimen/size16"
                                android:layout_weight="1.5"
                                android:text="@string/finalizado"
                                android:textColor="@color/md_indigo_100"
                                android:textSize="16sp" />

                        </TableRow>

                        <TableRow
                            android:id="@+id/tv_reprovado"
                            android:layout_margin="@dimen/size8"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/size16"
                                android:layout_marginEnd="@dimen/size16"
                                android:layout_weight="1.5"
                                android:text="@string/reprovado"
                                android:textColor="@color/md_red_A700"
                                android:textSize="16sp" />

                        </TableRow>

                        <TableRow
                            android:id="@+id/tv_desativado"
                            android:layout_margin="@dimen/size8"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:gravity="center">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/size16"
                                android:layout_marginEnd="@dimen/size16"
                                android:layout_weight="1.5"
                                android:text="@string/desativado"
                                android:textColor="@color/md_brown_100"
                                android:textSize="16sp" />

                        </TableRow>

                        <TableRow
                            android:id="@+id/tv_emexecucao"
                            android:layout_margin="@dimen/size8"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/size16"
                                android:layout_marginEnd="@dimen/size16"
                                android:layout_weight="1.5"
                                android:text="@string/em_execucao"
                                android:textColor="@color/md_green_500"
                                android:textSize="16sp" />

                        </TableRow>

                        <TableRow
                            android:id="@+id/tv_cadastro_em_andamento"
                            android:layout_margin="@dimen/size8"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/size16"
                                android:layout_marginEnd="@dimen/size16"
                                android:layout_weight="1.5"
                                android:text="@string/cadastro_em_andamento"
                                android:textColor="@color/md_blue_grey_100"
                                android:textSize="16sp" />

                        </TableRow>


                        <TableRow
                            android:id="@+id/tv_avaliacao_insuficiente"
                            android:layout_margin="@dimen/size8"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/size16"
                                android:layout_marginEnd="@dimen/size16"
                                android:layout_weight="1.5"
                                android:text="@string/avaliacao_insuficiente"
                                android:textColor="@color/md_cyan_700"
                                android:textSize="16sp" />

                        </TableRow>


                        <TableRow
                            android:id="@+id/tv_finalizado_renovado"
                            android:layout_margin="@dimen/size8"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/size16"
                                android:layout_marginEnd="@dimen/size16"
                                android:layout_weight="1.5"
                                android:text="@string/finalizado_renovado"
                                android:textColor="@color/md_indigo_400"
                                android:textSize="16sp" />

                        </TableRow>

                        <TableRow
                            android:id="@+id/tv_finalizado_pendencias"
                            android:layout_margin="@dimen/size8"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/size16"
                                android:layout_marginEnd="@dimen/size16"
                                android:layout_weight="1.5"
                                android:text="@string/finalizado_pendencias"
                                android:textColor="@color/md_indigo_200"
                                android:textSize="16sp" />

                        </TableRow>

                    </TableLayout>

                </RelativeLayout>

            </ViewSwitcher>

        </LinearLayout>



    </ScrollView>



</LinearLayout>